--- a/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
+++ b/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
@@ -5,6 +5,16 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "MongoDbSettings": {
+        "IsActive": true,
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "SelfWebsite",
+        "ResumesCollectionName": "Resumes",
+        "UsersCollectionName": "Users"
+    },
+    "EntityFrameworkSettings": {
+        "IsActive": false
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "SelfWebsiteDatabase": ""
