--- a/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
+++ b/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
@@ -5,30 +5,36 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "MongoDbSettings": {
+    "ElasticSettings": {
         "IsActive": true,
+        "Url": "http://localhost:9200",
+        "Username": "elastic",
+        "Password": "Mt0X4pxIHkWTE=rYTpA7"
+    },
+    "MongoDbSettings": {
+        "IsActive": false,
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "SelfWebsite",
         "ResumesCollectionName": "Resumes",
         "UsersCollectionName": "Users"
     },
     "EntityFrameworkSettings": {
-        "IsActive": false
+        "IsActive": true
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "SelfWebsiteDatabase": ""
+        "SelfWebsiteDatabase": "Data Source=localhost;Initial Catalog=SelfWebsite;User ID=SelfWebsiteAdmin;Password=admin"
     },
     "SelfWebsiteAngular": {
-        "Name": "",
+        "Name": "SelfWebsiteAngular",
         "Link": "http://localhost:4200"
     },
     "Settings": {
         "ServerLink": "https://localhost:7131",
         "Authorization": {
             "SymmetricSecurityKey": "",
-            "TokenExpireTimeMinutes": "",
-            "RefreshTokenExpireTimeDays": ""
+            "TokenExpireTimeMinutes": "5",
+            "RefreshTokenExpireTimeDays": "5"
         }
     }
 }
