azure raw working deploy

--- a/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
+++ b/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ElasticSettings": {
-        "IsActive": true,
+        "IsActive": false,
         "Url": "http://localhost:9200",
         "Username": "elastic",
         "Password": "Mt0X4pxIHkWTE=rYTpA7"
@@ -30,7 +30,7 @@
         "Link": "http://localhost:4200"
     },
     "Settings": {
-        "ServerLink": "https://localhost:7131",
+        "ServerLink": "https://chisatochka.azurewebsites.net",
         "Authorization": {
             "SymmetricSecurityKey": "",
             "TokenExpireTimeMinutes": "5",
