--- a/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
+++ b/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ElasticSettings": {
-        "IsActive": true,
+        "IsActive": false,
         "Url": "http://localhost:9200",
         "Username": "elastic",
         "Password": "Mt0X4pxIHkWTE=rYTpA7"
@@ -20,6 +20,9 @@
     },
     "EntityFrameworkSettings": {
         "IsActive": true
+    },
+    "TelegramBots": {
+        "PixivLinksBotToken": ""
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
