--- a/SelfWebsiteAngular/package.json
+++ b/SelfWebsiteAngular/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@angular/animations": "^14.0.1",
     "@angular/cdk": "^13.3.7",
+    "@angular/cli": "^14.2.7",
     "@angular/common": "^14.0.1",
     "@angular/compiler": "^14.0.1",
     "@angular/core": "^14.0.1",
@@ -26,13 +27,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "rxjs": "~7.5.0",
+    "@microsoft/signalr": "^6.0.10",
+    "rxjs": "^7.5.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.1",
-    "@angular/cli": "^14.0.1",
     "@angular/compiler-cli": "^14.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
