--- a/SelfWebsiteAPI/SelfWebsiteApi/Dockerfile
+++ b/SelfWebsiteAPI/SelfWebsiteApi/Dockerfile
@@ -8,13 +8,14 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["SelfWebsiteApi/SelfWebsiteApi.csproj", "SelfWebsiteApi/"]
+COPY ["TelegramBot/TelegramBot.csproj", "TelegramBot/"]
 RUN dotnet restore "SelfWebsiteApi/SelfWebsiteApi.csproj"
 COPY . .
 WORKDIR "/src/SelfWebsiteApi"
 RUN dotnet build "SelfWebsiteApi.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "SelfWebsiteApi.csproj" -c Release -o /app/publish
+RUN dotnet publish "SelfWebsiteApi.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
