--- a/SelfWebsiteAPI/SelfWebsiteApi/SelfWebsiteApi.csproj
+++ b/SelfWebsiteAPI/SelfWebsiteApi/SelfWebsiteApi.csproj
@@ -23,6 +23,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
     <PackageReference Include="NEST" Version="7.17.4" />
+    <PackageReference Include="NLog.Database" Version="5.0.5" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.1.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
