Added domen link to CORS

--- a/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
+++ b/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
@@ -30,7 +30,8 @@
     },
     "SelfWebsiteAngular": {
         "Name": "SelfWebsiteAngular",
-        "Link": "http://localhost:4200"
+        "AzureAngularLink": "https://chisatochkaa.azurewebsites.net",
+        "DomenLink": "https://michaelfastov.space"
     },
     "Settings": {
         "ServerLink": "https://localhost:7131",
