--- a/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
+++ b/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
@@ -31,7 +31,7 @@
     "SelfWebsiteAngular": {
         "Name": "SelfWebsiteAngular",
         "AzureAngularLink": "https://chisatochkaa.azurewebsites.net",
-        "DomenLink": "https://michaelfastov.space"
+        "DomainLink": "https://michaelfastov.space"
     },
     "Settings": {
         "ServerLink": "https://localhost:7131",
