GraphQL and Middleware

--- a/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
+++ b/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
@@ -22,6 +22,7 @@
         "IsActive": true
     },
     "TelegramBots": {
+        "IsActive": false,
         "PixivLinksBotToken": ""
     },
     "AllowedHosts": "*",
