--- a/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
+++ b/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
@@ -25,6 +25,9 @@
         "IsActive": false,
         "PixivLinksBotToken": ""
     },
+    "Redis": {
+        "PixivLinksDbUrl": "redis-12658.c245.us-east-1-3.ec2.cloud.redislabs.com:12658,password=5PFUTAAtq8QiXLq8nG1DNa5EPnuSgNhe"
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "SelfWebsiteDatabase": "Data Source=localhost;Initial Catalog=SelfWebsite;User ID=SelfWebsiteAdmin;Password=admin"
