--- a/SelfWebsiteAPI/SelfWebsiteApi/SelfWebsiteApi.csproj
+++ b/SelfWebsiteAPI/SelfWebsiteApi/SelfWebsiteApi.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="NEST" Version="7.17.4" />
     <PackageReference Include="NLog.Database" Version="5.0.5" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.1.5" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.90" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
@@ -40,6 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RedisCache\RedisCache.csproj" />
     <ProjectReference Include="..\TelegramBot\TelegramBot.csproj" />
   </ItemGroup>
 
