--- a/SelfWebsiteAPI/TelegramBot/TelegramBot.csproj
+++ b/SelfWebsiteAPI/TelegramBot/TelegramBot.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RedisCache\RedisCache.csproj" />
+  </ItemGroup>
+
 </Project>
