Redis connection retry

--- a/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
+++ b/SelfWebsiteAPI/SelfWebsiteApi/appsettings.json
@@ -26,7 +26,8 @@
         "PixivLinksBotToken": ""
     },
     "Redis": {
-        "PixivLinksDbUrl": "redis-12658.c245.us-east-1-3.ec2.cloud.redislabs.com:12658,password=5PFUTAAtq8QiXLq8nG1DNa5EPnuSgNhe"
+        "PixivLinksDbUrl": "redis-12658.c245.us-east-1-3.ec2.cloud.redislabs.com:12658",
+        "PixivLinksDbPassword": "5PFUTAAtq8QiXLq8nG1DNa5EPnuSgNhe"
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
